yamls/pod-applied.yml
apiVersion: v1
kind: Pod
metadata:
  annotations: {}
  name: nginx
  namespace: default
spec:
  containers:
  - image: nginx:1.14.2
    name: nginx
    ports:
    - containerPort: 80
