yamls/pod-hello-world-labels-annotations.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels: 
    app: hello-world
    env: prod
  annotations:
    commit: '123456'
    contact: 'eric@ericlazar.com'
    release: 'rel-2-projectname-builddefname'
    description: "This pod exists to help study for the CKAD exam"
spec:
  containers:
  - name: hello-world
    image: eric/java-hello-world:1.0.0
    ports: 
    - containerPort: 8080
  restartPolicy: Never
