yamls/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
